# neverstoplearning-rust

./: .gitignore  Cargo.toml
src/: arrays.rs  borrowing.rs  closures.rs  enum.rs  error_handling.rs  expressions.rs  for.rs  functions.rs  generics.rs  if.rs  libraries.md  loop.rs  match.rs  option.rs  ownership.rs  println.rs  slices.rs  strings.rs  struct.rs  struct_associated_methods.rs  test.rs  traits.rs  tuples.rs  types.rs  types_scalar.rs  variables.rs  vectors.rs  workspaces.md
src/async-await/: async-await-base.rs  async-await-on-function.rs
src/cli/: clap-template.rs
src/design-patterns/: abstract-factory.rs  builder.rs  prototype.rs
src/filesystem/: read_file.rs  recursive_find_dir_with_callback_to_apply.rs  replace_file_content.rs
src/hashing/: hash_file_content.rs
src/http-clients/: dowload_file.rs  post-reqwest-json.rs
src/mariadb/: mysql_async_tokio_sqlx_simple_query.rs  mysql_simple_query.rs
src/parallelism-concurrency/: benchmark.rs  thread-parallel.rs
src/postgresql/: connection_and_query_async.rs
src/rabbitmq/: rabbitmq-consumer.rs  rabbitmq-producer.rs
src/redis/: redis-stream-client.rs  redis-stream-consume-new-items.rs
src/sawtooth-client/: get-single-state.rs
src/scripts/: factory-method-design-pattern.rs  mysql_simple_query.rs  practice_references.rs  redis-stream-client.rs  some_script_to_test.rs  strategy-design-pattern.rs  websocket-client-simple.rs
src/shell/: execute_powershell_new_thread.rs
src/sqlite/: get-rows-from-table.rs
src/string_manipulation/: capitalize_ucfirst.rs  convert_vec_to_string.rs  (+3 more)
(+10 files in other folders)
